Make TabPane and TextArea large: prefHeight="1600" prefWidth="2400"

--- a/PeLess/resources/com/blackpatchpanel/free/fxml/tab.fxml
+++ b/PeLess/resources/com/blackpatchpanel/free/fxml/tab.fxml
@@ -14,7 +14,9 @@ fx:controller="com.blackpatchpanel.free.peless.controller.TabController">
    <content>
       <ScrollPane>
          <content>
-            <TextArea fx:id="textArea" editable="false" />
+            <TextArea fx:id="textArea" editable="false" 
+            prefHeight="1600" prefWidth="2400"
+            />
          </content>
       </ScrollPane>
    </content>
