--- a/PeLess/resources/com/blackpatchpanel/free/fxml/base.fxml
+++ b/PeLess/resources/com/blackpatchpanel/free/fxml/base.fxml
@@ -20,8 +20,10 @@
 	they should be considered together.
  -->
 
-<VBox fx:id="container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@/css/peless.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" 
-fx:controller="com.blackpatchpanel.free.peless.controller.Base">
+<VBox fx:id="container" maxHeight="-Infinity" maxWidth="-Infinity" 
+minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" 
+stylesheets="@/css/peless.css" xmlns="http://javafx.com/javafx/8.0.65" 
+xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.blackpatchpanel.free.peless.controller.Base">
   
    <children>
    	  <!--
@@ -70,8 +72,6 @@ fx:controller="com.blackpatchpanel.free.peless.controller.Base">
       <!--
       Tabs added to this tab pane will be created dynamically 
        -->
-      <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE"
-      fx:id="tabPane" 
-      />
+      <TabPane fx:id="tabPane" prefHeight="1600" prefWidth="2400" tabClosingPolicy="UNAVAILABLE" />
    </children>
 </VBox>
